src/styles/main.css
@import "tailwindcss";

@import "./animations.css";
@import "./fonts.css";
@import "./mdx.css";
@import "./overrides.css";

@theme {
  --font-sans: "Atkinson Hyperlegible Next";
  --font-mono: "Maple Mono";

  /* See https://font.subf.dev/en/playground for what each value means */
  --font-mono--font-feature-settings: "cv01", "cv02", "cv05", "cv61", "ss05", "ss11";

  /* Monospace text should be a little smaller than display text. Otherwise
   * it looks too large. */
  --text-mono: 0.85rem;

  --spacing-pad: --spacing(2.5);
  --spacing-pad-2: calc(var(--spacing-pad) * 2);
  --spacing-pad-3: calc(var(--spacing-pad) * 3);
  --spacing-pad-4: calc(var(--spacing-pad-2) * 2);

  /* This should stay in sync with the ICON_SIZE constant. */
  --spacing-icon: 18px;

  /* Primitives */
  --color-sweater-1: #e1dfff;
  --color-sweater-2: #d6d3ff;
  --color-sweater-3: #c3bdff;
  --color-sweater-4: #ada6ff;
  --color-sweater-5: #9a91fe;
  --color-sweater-6: #6b62cb;
  --color-sweater-7: #484390;
  --color-sweater-8: #312d65;
  --color-sweater-9: #1d193d;
  --color-sweater-10: #0a0919;

  --color-line: var(--line);
  --color-link-primary: var(--link-primary);
  --color-link-primary-hover: var(--link-primary-hover);
  --color-link-secondary: var(--link-secondary);
  --color-link-secondary-hover: var(--link-secondary-hover);
  --color-icon: var(--icon);
  --color-heading: var(--heading);

  /* A good indicator for when we're beyond phone width territory. As an
   * example, the iPhone 14 Pro Max has a screen width of 430px. */
  --breakpoint-desktop: 480px;
}

@layer base {
  :root {
    --border-w: 2px;

    --header-w: 800px;
    --real-header-w: calc(var(--header-w) + var(--spacing-pad-2));

    --wide-w: 1200px;
    --real-wide-w: calc(var(--wide-w) + var(--spacing-pad-4));

    --line: var(--color-sweater-9);
    --link-primary: var(--color-sweater-3);
    --link-primary-hover: var(--color-sweater-1);
    --link-secondary: var(--color-sweater-5);
    --link-secondary-hover: var(--color-sweater-4);
    --icon: var(--color-sweater-6);
    --heading: var(--color-sweater-2);

    @variant light {
      --line: var(--color-sweater-2);
      --link-primary: var(--color-sweater-7);
      --link-primary-hover: var(--color-sweater-9);
      --link-secondary: var(--color-sweater-6);
      --link-secondary-hover: var(--color-sweater-7);
      --icon: var(--color-sweater-5);
      --heading: var(--color-sweater-8);
    }
  }

  html {
    @apply bg-sweater-10 text-sweater-1;

    scrollbar-gutter: stable;

    &::selection {
      @apply bg-sweater-8 text-sweater-3;
    }

    @variant light {
      @apply bg-sweater-1 text-sweater-10;

      &::selection {
        @apply bg-sweater-3 text-sweater-8;
      }
    }
  }

  /* Make vertical scrollbar always visible so horizontal content
   * doesn't jump */
  body {
    overflow-x: hidden;
    overflow-y: scroll;

    /* This usually causes the whole page to shift because it also
     * removes scrollbars, but we set scrollbar-gutter above. However, this
     * causes there to be a gap on the right edge of the screen. I am
     * hoping the dialog backdrop masks this... */
    &:has(dialog[open]) {
      overflow: hidden;
    }
  }

  p,
  a,
  li,
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    overflow-wrap: break-word;
    text-wrap: pretty;

    /* An ABSOLUTELY INSANE HECK that detects if we're on WebKit on iOS,
     * and disables text wrap. I don't like the behavior of `pretty` on it,
     * as it tries to keep every line width the same. In the future if/when
     * the `avoid-orphans` value is shipped, I can remove this.
     *
     * See also https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/-webkit-touch-callout#browser_compatibility. */
    @supports (-webkit-touch-callout: none) {
      text-wrap: wrap;
    }
  }

  img,
  video {
    font-style: italic;

    &::selection {
      background-color: var(--color-sweater-5);
    }

    @variant light {
      &::selection {
        background-color: var(--color-sweater-2);
      }
    }
  }
}

@utility maple {
  @apply font-mono text-mono;
}

@utility border-style {
  @apply border-dashed border-line;
}

@utility bordered {
  @apply border-(length:--border-w) border-style;
}

/* Quicker way of writing `not-dark` */
@custom-variant light {
  @media not (prefers-color-scheme: dark) {
    @slot;
  }
}

@view-transition {
  navigation: auto;
}

